--- a/conf/base/etc/mkinitcpio.conf
+++ b/conf/base/etc/mkinitcpio.conf
@@ -1,4 +1,4 @@
 MODULES=()
 BINARIES=()
-FILES=(/crypto_keyfile.bin)
-HOOKS=(base consolefont udev autodetect modconf block encrypt filesystems keyboard)
+FILES=()
+HOOKS=(base consolefont udev autodetect modconf block encrypt-dh filesystems keyboard)
