--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware)
 pkgver=1
-pkgrel=84
+pkgrel=85
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/dotfiles"
@@ -96,8 +96,8 @@ package_couldinho-base() {
 
     # Boot and base progs
     depends+=(
-        grub efibootmgr     # For EFI systems
         cryptboot           # Encrypted partitions
+        mkinitcpio-encrypt-detached-header # Encrypt hook with detatched header
         intel-ucode         # Microcode patches
         fwupd               # Firmware updater
         terminus-font       # Better font for console
