--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware)
 pkgver=1
-pkgrel=85
+pkgrel=86
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/dotfiles"
@@ -98,6 +98,7 @@ package_couldinho-base() {
     depends+=(
         cryptboot           # Encrypted partitions
         mkinitcpio-encrypt-detached-header # Encrypt hook with detatched header
+        arch-secure-boot    # UEFI Secure Boot
         intel-ucode         # Microcode patches
         fwupd               # Firmware updater
         terminus-font       # Better font for console
