--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,10 +1,10 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware)
 pkgver=1
-pkgrel=87
+pkgrel=88
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
-url="https://github.com/kontax/dotfiles"
+url="https://github.com/kontax/arch-packages"
 license=(MIT)
 groups=(couldinho)
 
