--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware)
 pkgver=2
-pkgrel=4
+pkgrel=5
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -128,6 +128,8 @@ package_couldinho-base() {
         bat                 # Cat replacement with syntax highlighting
     )
 
+    install -dm 0755 base/etc/bat "$pkgdir/etc/bat"
+
     # Networking + VPN
     depends+=(
         networkmanager              # Networking
@@ -185,6 +187,7 @@ package_couldinho-base() {
     )
 
     install -Dm 0644 base/etc/profile.d/zz_custom.sh "$pkgdir/etc/profile.d/zz_custom.sh"
+    install -Dm 0644 base/etc/pacman.d/hooks/arch-audit.hook "$pkgdir/etc/pacman.d/hooks/arch-audit.hook"
     install -dm 0750 base/etc/usbguard "$pkgdir/etc/usbguard"
     install -Dm 0600 base/etc/usbguard/usbguard-daemon.conf \
         "$pkgdir/etc/usbguard/couldinho-usbguard-daemon.conf"
