Clean up i3status slightly

--- a/conf/desktop/etc/i3status.conf
+++ b/conf/desktop/etc/i3status.conf
@@ -14,7 +14,7 @@ order += 'external_script checkofficial'
 order += 'external_script checkupdates'
 order += 'external_script checkupdates_aur'
 #order += 'file_status decrypted'
-order += 'scratchpad_async'
+order += 'scratchpad'
 order += 'net_rate'
 order += 'diskdata'
 order += 'sysdata'
