--- a/conf/laptop/etc/i3status.conf
+++ b/conf/laptop/etc/i3status.conf
@@ -10,16 +10,10 @@ general {
 
 order += 'usbguard'
 order += 'yubikey'
-#order += 'file_status MSITVPN'
-#order += 'external_script pacdiff'
-#order += 'external_script checkofficial'
 order += 'external_script checkupdates'
 order += 'external_script checkupdates_aur'
-#order += 'external_script checkupdates_vcs'
-#order += 'external_script checkrebuild'
-order += 'external_script checkfirmware'
-#order += 'file_status decrypted'
-order += 'scratchpad_async'
+#order += 'external_script checkfirmware'
+order += 'scratchpad'
 order += 'net_rate'
 order += 'diskdata'
 order += 'sysdata'
