--- a/conf/desktop/etc/i3status.conf
+++ b/conf/desktop/etc/i3status.conf
@@ -13,6 +13,7 @@ order += 'yubikey'
 order += 'external_script checkofficial'
 order += 'external_script checkupdates'
 order += 'external_script checkupdates_aur'
+order += 'external_script pacdiff'
 #order += 'file_status decrypted'
 order += 'scratchpad'
 order += 'net_rate'
@@ -76,20 +77,6 @@ external_script checkupdates_aur {
   format = '\?if=lines&color=degraded 󰀽  {lines}'
 }
 
-external_script checkupdates_vcs {
-  cache_timeout = 1200
-  button_show_notification = 1
-  script_path = "if is_online; then aur vercmp devel; fi"
-  format = '\?if=lines&color=degraded 󰀼  {lines}'
-}
-
-external_script checkrebuild {
-  cache_timeout = -1
-  button_show_notification = 1
-  script_path = "checkrebuild | grep maximbaz || true"
-  format = '\?if=lines&color=degraded 󰁂  {lines}'
-}
-
 external_script pacdiff {
   cache_timeout = -1
   button_show_notification = 1
@@ -111,11 +98,6 @@ net_rate {
   thresholds = {'total': [(0, 'good'), (1499500, 'degraded'), (14995000, 'bad')]} # 8 mbit, 80 mbit
   hide_if_zero = true
   unit = 'MB/s'
-}
-
-file_status decrypted {
-  paths = '/home/maximbaz/decrypted/.lock'
-  format = '\?if=path&color=degraded '
 }
 
 file_status PIA {
