--- a/conf/laptop/etc/i3status.conf
+++ b/conf/laptop/etc/i3status.conf
@@ -12,6 +12,7 @@ order += 'usbguard'
 order += 'yubikey'
 order += 'external_script checkupdates'
 order += 'external_script checkupdates_aur'
+order += 'external_script pacdiff'
 #order += 'external_script checkfirmware'
 order += 'scratchpad'
 order += 'net_rate'
@@ -95,20 +96,6 @@ external_script checkupdates_aur {
   button_show_notification = 1
   script_path = "if is_online; then aur repo -Su -d couldinho-arch-aur; fi"
   format = '\?if=lines&color=degraded 󰀽  {lines}'
-}
-
-external_script checkupdates_vcs {
-  cache_timeout = 1200
-  button_show_notification = 1
-  script_path = "if is_online; then aur vercmp devel; fi"
-  format = '\?if=lines&color=degraded 󰀼  {lines}'
-}
-
-external_script checkrebuild {
-  cache_timeout = -1
-  button_show_notification = 1
-  script_path = "checkrebuild | grep maximbaz || true"
-  format = '\?if=lines&color=degraded 󰁂  {lines}'
 }
 
 external_script checkfirmware {
