--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware)
 pkgver=2
-pkgrel=11
+pkgrel=12
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -279,6 +279,7 @@ package_couldinho-desktop() {
         pulseaudio              # Sound server
         pulseaudio-alsa         # ALSA config for pulseaudio
         pamixer                 # Command line mixer
+        vimiv                   # Image viewer with vim bindings
     )
 
     # Documents
