--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware)
 pkgver=2
-pkgrel=12
+pkgrel=13
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -417,6 +417,11 @@ package_couldinho-sec() {
     # Cracking
     depends+=(
         john                    # John the Ripper password cracker
+    )
+
+    # Forensics
+    depends+=(
+        volatility              # Memory forensics toolkit
     )
 }
 
