--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware)
 pkgver=2
-pkgrel=14
+pkgrel=15
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -368,6 +368,7 @@ package_couldinho-dev() {
     # Cloud
     depends+=(
         aws-cli                 # Command line interface to AWS
+        aws-sam-cli             # Client for AWS SAM serverless
         npm                     # Node package manager (used for serverless)
     )
 }
