--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware)
 pkgver=2
-pkgrel=17
+pkgrel=18
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -406,7 +406,7 @@ package_couldinho-sec() {
         radare2                 # Command line reverse engineering framework
         ida-free                # Hexrays reversen engineering framework
         ghidra                  # Reverse engineering framework similar to IDA
-        voltron-git             # A more useful display for GDB
+        pwndbg                  # Enhance GDB, similar to GEF
         gef-git                 # GDB Enhanced Features
         pwngdb                  # GDB for pwn
         python-capstone         # GEF optional dependency
