--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware)
 pkgver=2
-pkgrel=21
+pkgrel=22
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -263,7 +263,7 @@ package_couldinho-desktop() {
         pinentry                # Enter GPG pins using dmenu
     )
 
-    install -Dm 0644 desktop/etc/rofi.rasi "$pkgdir/etc/rofi.rasi"
+    #install -Dm 0644 desktop/etc/rofi.rasi "$pkgdir/etc/rofi.rasi"
     install -Dm 0644 desktop/etc/xdg/flashfocus/flashfocus.yml "$pkgdir/etc/xdg/flashfocus/couldinho-desktop-flashfocus.yml"
 
     # Multimedia
