--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware)
 pkgver=2
-pkgrel=23
+pkgrel=24
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -462,6 +462,6 @@ package_couldinho-vmware() {
     )
 
     install -Dm 0644 vmware/etc/i3/config "$pkgdir/etc/i3/couldinho-vmware-config"
-    install -Dm 0644 vmware/etc/zsh/zprofile "$pkgdir/etc/zsh/zprofile"
+    install -Dm 0644 vmware/etc/zsh/zprofile "$pkgdir/etc/zsh/couldinho-vmware-zprofile"
 
 }
