Update some sway packages

--- a/conf/desktop/etc/systemd/user/sway-inactive-window-transparency.service
+++ b/conf/desktop/etc/systemd/user/sway-inactive-window-transparency.service
@@ -4,7 +4,7 @@ PartOf=graphical-session.target
 After=graphical-session.target
 
 [Service]
-ExecStart=%h/.local/bin/sway-inactive-window-transparency
+ExecStart=/usr/local/bin/sway-inactive-window-transparency
 Restart=always
 RestartSec=10s
 
