--- a/conf/desktop/etc/systemd/user/sway-autoname-workspaces.service
+++ b/conf/desktop/etc/systemd/user/sway-autoname-workspaces.service
@@ -4,7 +4,7 @@ PartOf=graphical-session.target
 After=graphical-session.target
 
 [Service]
-ExecStart=%h/.local/bin/sway-autoname-workspaces -d
+ExecStart=/usr/local/bin/sway-autoname-workspaces -d
 Restart=always
 RestartSec=10s
 
