--- a/conf/desktop/etc/systemd/user/waybar-updates.service
+++ b/conf/desktop/etc/systemd/user/waybar-updates.service
@@ -2,4 +2,4 @@
 Description=Refresh list of outdated packages in waybar
 
 [Service]
-ExecStart=%h/.local/bin/waybar-updates refresh
+ExecStart=/usr/local/bin/waybar-updates refresh
