--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware)
 pkgver=2
-pkgrel=29
+pkgrel=30
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -289,7 +289,7 @@ package_couldinho-desktop() {
         gtk-theme-arc-gruvbox-git   # Arc grey based theme with some gruvboxd colours
     )
 
-    #install -Dm 0644 desktop/etc/rofi.rasi "$pkgdir/etc/rofi.rasi"
+    install -Dm 0644 desktop/etc/gtk-3.0/settings.ini "$pkgdir/etc/gtk-3.0/settings.ini"
     install -Dm 0644 desktop/etc/xdg/flashfocus/flashfocus.yml "$pkgdir/etc/xdg/flashfocus/couldinho-desktop-flashfocus.yml"
     install -Dm 0644 desktop/etc/systemd/user/sway-autoname-workspaces.service "$pkgdir/etc/systemd/user/sway-autoname-workspaces.service"
     install -Dm 0644 desktop/etc/systemd/user/sway-inactive-window-transparency.service "$pkgdir/etc/systemd/user/sway-inactive-window-transparency.service"
